# evm-rs

./: .gitignore  Cargo.toml  FORMATTING.md  Jenkinsfile  README.md
cli/: Cargo.toml
jsontests/: Cargo.toml
jsontests/benches/: performance.rs
jsontests/jsontests-derive/: Cargo.toml
jsontests/jsontests-derive/src/: attr.rs  lib.rs  tests.rs  util.rs
jsontests/src/: blockchain.rs  lib.rs  util.rs
jsontests/src/blockchaintests/: mod.rs  util.rs
jsontests/src/vmtests/: blockchain.rs  mod.rs  util.rs
jsontests/tests/: blockchaintests.rs  eiptests.rs  harness.rs  inputlimits.rs  vmtests.rs
network/classic/: Cargo.toml
network/classic/src/: lib.rs
network/dynamic/: Cargo.toml
network/dynamic/src/: lib.rs
network/ellaism/: Cargo.toml
network/ellaism/src/: lib.rs
network/expanse/: Cargo.toml
network/expanse/src/: lib.rs
network/foundation/: Cargo.toml
network/foundation/src/: lib.rs
network/musicoin/: Cargo.toml
network/musicoin/src/: lib.rs
network/ubiq/: Cargo.toml
network/ubiq/src/: lib.rs
precompiled/bn128/: Cargo.toml
precompiled/bn128/src/: lib.rs
precompiled/modexp/: Cargo.toml
precompiled/modexp/src/: lib.rs
regtests/: Cargo.toml
src/: lib.rs  memory.rs  params.rs  pc.rs  transaction.rs
src/commit/: account.rs
src/eval/: check.rs  cost.rs  lifecycle.rs  mod.rs
src/eval/run/: arithmetic.rs  bitwise.rs  environment.rs  flow.rs  mod.rs  system.rs
src/evmjit/: mod.rs
src/evmjit/compiler/: attributes.rs  byte_order.rs  callback.rs  evm_compiler.rs  evmconstants.rs  evmtypes.rs  exceptions.rs  external_declarations.rs  intrinsics.rs  jit_context.rs  mod.rs
src/evmjit/compiler/gas_cost/: fixed_gas_cost.rs  mod.rs  variable_gas_cost.rs
src/evmjit/compiler/memory/: evm_memory.rs  mem_representation.rs  mod.rs
src/evmjit/compiler/runtime/: env.rs  mod.rs  rt_data_type.rs  rt_type.rs  stack_init.rs  txctx.rs
src/evmjit/compiler/runtime_functions/: divmod.rs  exp.rs  mod.rs
src/evmjit/compiler/stack/: mod.rs  operand_stack.rs
src/evmjit/compiler/util/: funcbuilder.rs  mod.rs  pushdata.rs
src/patch/: dynamic.rs  mod.rs
stateful/: Cargo.toml
stateful/examples/: parallel.rs
stateful/src/: lib.rs
stateful/tests/: genesis.rs
