[package]
name = "evm-network-ubiq"
version = "0.11.0-beta.2"
description = "Ubiq patches for SputnikVM. Deprecated and will be dropped in future releases: use evm-network instead"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/etclabscore/sputnikvm"
edition = "2018"

[dependencies]
evm = { version = "0.11.0-beta.2", path = "../..", default-features = false }
evm-precompiled-bn128 = { version = "0.11.0-beta.2", path = "../../precompiled/bn128", default-features = false}
evm-precompiled-modexp = { version = "0.11.0-beta.2", path = "../../precompiled/modexp", default-features = false }
ethereum-bigint = { version = "0.2", default-features = false }

[features]
default = ["std", "rust-secp256k1"]
rlp = ["ethereum-bigint/rlp"]
c-secp256k1 = ["evm/c-secp256k1", "evm-precompiled-bn128/c-secp256k1", "evm-precompiled-modexp/c-secp256k1"]
rust-secp256k1 = ["evm/rust-secp256k1", "evm-precompiled-bn128/rust-secp256k1", "evm-precompiled-modexp/rust-secp256k1"]
std = ["evm/std"]
