[package]
name = "ethereumvm-precompiled-bn128"
version = "0.11.0"
description = "bn128 precompiled contracts for EthereumVM."
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>"]
repository = "https://github.com/ethereumproject/evm-rs"
edition = "2018"

[dependencies]
ethereumvm = { version = "0.11", path = "../..", default-features = false }
ethereum-bigint = { version = "0.2", default-features = false }
bn-plus = { version = "0.4" }

[features]
default = ["std", "rust-secp256k1"]
rlp = ["ethereum-bigint/rlp"]
c-secp256k1 = ["ethereumvm/c-secp256k1"]
rust-secp256k1 = ["ethereumvm/rust-secp256k1"]
std = ["ethereumvm/std"]
